# pycookie

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
pycookie/: __init__.py  command_line.py
tests/: pysetup.yml.0  test_pycookie.py
