[metadata]
name = pycookie
summary = Cookie cutter python module with Vagrant test environment
description-file = README.md
author = Venkat Kaushik
author-email = higgsmass@gmail.com
classifier =
    Environment :: HSSC 
    Intended Audience :: Information Technology
    Intended Audience :: Software Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = pycookie

